--- a/style.css
+++ b/style.css
@@ -4,6 +4,140 @@
     sans-serif;
     font-weight: 400;
     font-style: normal;
+
+}
+body {
+        background-image: url(./image/The_Matrix_movies_code-127717.jpg!d);
+        background-size: cover;
+        background-position-x: center;
+        background-attachment: fixed;
+}
+
+h1 {
+    margin: 20px;
+    padding-top: 20px;
+    padding-left: 9rem;
+}
+
+h2 {
+    margin-top: 20px;
+    padding-left: 5rem;
+}
+li>a:hover {
+    background-color: rgba(218, 216, 216, 0.589);
+}
+img {
+    width: auto;
+    height: 380px;
+    border: solid 1px black;
+    padding-left: 0;
+}
+figcaption {
+    width: 350px;
+}
+.nav-menu {
+    width: 100%;
+    background-color: lightcyan;
+    background: transparent;
+    position: fixed;
+    text-rendering: auto;
+    overflow: visible;
+    top: 0;
+    border-radius: 4px;
+    margin: 0 auto;
+    padding: 5px;
+    position: fixed;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    z-index: 999;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.nav-menu ul li>a {
+    display: inline-block;
+    color: rgb(46, 0, 0);
+    text-align: center;
+    padding: 5px 24px;
+    text-decoration: none;
+}
+.web-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 3rem;
+
+}
+.polaroid {
+    overflow: visible;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    width: 90%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: sticky;
+}
+textarea{
+    width: 500px;
+    background-color: #eee;
+    border: 1px solid #999;
+    display: block;
+    padding: 20px;
+    font-family: source-code-pro,
+    monospace;
+    font-weight: 500;
+    font-style: normal;
+}
+.source-box {
+    display: flex;
+    flex-direction: column;
+}
+.box-vens {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+strong {
+    font-weight: bolder;
+}
+#box-vens {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+#box-aisha {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    background-image: url(./image/green.bläter.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+#aisha {
+    width: 30vw;
+    height: 400px;
+}
+
+#aisha-box {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+#box-serdar div {
+    display: flex;
+    flex-direction: column;
+    background-color: lightgray;
+    margin-top: 10px;
+}
+#bild {
+    width: 62vw;
+    height: auto;
 }
 ul {
     list-style-type: none;
@@ -12,66 +146,9 @@ ul {
     overflow: hidden;
     background-color: rgba(255, 255, 255, 0.678);
 }
+
 li {
     float: left;
-}
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 5px 26px;
     text-decoration: none;
-}
-li a:hover {
-    background-color: rgba(17, 17, 17, 0.589);
-}
-.nav-menu {
-    background-color: lightcyan;
-    background: transparent;
-    position: fixed;
-    width: 93.7%;
-    text-rendering: auto;
-    overflow: visible;
-    top: 0;
-    border-radius: 4px;
-    margin: 0 auto;
-    position: fixed;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    z-index: 999;
-}
-.nav-menu ul li>a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 5px 24px;
-    text-decoration: none;
-}
-.sourcecode {
-font-family: source-code-pro,
-monospace;
-font-weight: 700;
-font-style: normal;
-}
-.web-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
-.polaroid {
-    overflow: visible;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    width: 80%;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    position: sticky;
-}
-#box-aisha {
-    display: flex;
+    list-style: none;
 }
