--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 }
 body {
-        background-image: url(./image/The_Matrix_movies_code-127717.jpg!d);
+        background-image: url(./image/analytics-3088958_1920.jpg);
         background-size: cover;
         background-position-x: center;
         background-attachment: fixed;
@@ -26,14 +26,31 @@ h2 {
 li>a:hover {
     background-color: rgba(218, 216, 216, 0.589);
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.678);
+}
+li {
+    float: left;
+    text-decoration: none;
+    list-style: none;
+}
 img {
-    width: auto;
-    height: 380px;
+    width: 50vw;
+    height: auto;
     border: solid 1px black;
     padding-left: 0;
+    border-radius: .3rem;
 }
 figcaption {
-    width: 350px;
+    width: 50vw;
+}
+.site-header {
+    display: flex;
+    
 }
 .nav-menu {
     width: 100%;
@@ -54,6 +71,8 @@ figcaption {
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    justify-content: space-between;
 }
 .nav-menu ul li>a {
     display: inline-block;
@@ -62,12 +81,58 @@ figcaption {
     padding: 5px 24px;
     text-decoration: none;
 }
+.site-search {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 300px;
+    margin-right: 1em;
+}
+
+.site-search-button,
+.site-search-input {
+    border: 1px solid whitesmoke;
+    border-radius: 3px;
+    height: 20px;
+}
+
+.site-search-button {
+    background: #1b680c;
+    color: #fff;
+    font-size: 12px;
+}
 .web-container {
     display: flex;
-    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: space-around;
+}
+.menu {
+    margin-top: 1rem;
+    padding: .3rem;
+    width: 40rem;
+} 
+.menu ul {
+    display: flex;
     flex-direction: column;
-    gap: 3rem;
-
+    position: fixed;
+    text-rendering: auto;
+    overflow: visible;
+    background-color: whitesmoke;
+    color: rgb(46, 0, 0);
+    border-radius: .3rem;
+    gap: .1rem;
+    padding: .3rem;
+    font-size: large;
+    text-decoration: none
+}
+.tutorial-box {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 2rem;
 }
 .polaroid {
     overflow: visible;
@@ -82,7 +147,7 @@ figcaption {
     position: sticky;
 }
 textarea{
-    width: 500px;
+    width: 30vw;
     background-color: #eee;
     border: 1px solid #999;
     display: block;
@@ -91,10 +156,12 @@ textarea{
     monospace;
     font-weight: 500;
     font-style: normal;
+    border-radius: .3rem;
 }
 .source-box {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 .box-vens {
     display: flex;
@@ -108,6 +175,7 @@ strong {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    border-radius: .3rem;
 }
 #box-aisha {
     display: flex;
@@ -116,39 +184,39 @@ strong {
     background-image: url(./image/green.bläter.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-
+    border-radius: .3rem;
 }
 #aisha {
-    width: 30vw;
-    height: 400px;
+    width: 50vw;
+    height: auto;
+    justify-content: center;
 }
 
 #aisha-box {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
 }
 
 
-#box-serdar div {
+#box-serdar {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     background-color: lightgray;
     margin-top: 10px;
-}
-#bild {
-    width: 62vw;
-    height: auto;
-}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgba(255, 255, 255, 0.678);
+    border-radius: .3rem;
 }
 
-li {
-    float: left;
-    text-decoration: none;
-    list-style: none;
+@media (max-width: 1072px) {
+    .menu ul {
+        display: none;
+    }
+.web-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-around;
+}
 }
