--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     sans-serif;
     font-weight: 400;
     font-style: normal;
-
+    margin: 0;
 }
 body {
         background-image: url(./image/analytics-3088958_1920.jpg);
@@ -22,6 +22,16 @@ h1 {
 h2 {
     margin-top: 20px;
     padding-left: 5rem;
+}
+h3 {
+    background-color: white;
+}
+a:link,
+a:visited {
+    color: rgb(46, 0, 0);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
 }
 li>a:hover {
     background-color: rgba(218, 216, 216, 0.589);
@@ -110,7 +120,7 @@ figcaption {
     justify-content: space-around;
 }
 .menu {
-    margin-top: 1rem;
+    margin-top: 2rem;
     padding: .3rem;
     width: 40rem;
 } 
@@ -123,8 +133,8 @@ figcaption {
     background-color: whitesmoke;
     color: rgb(46, 0, 0);
     border-radius: .3rem;
-    gap: .1rem;
-    padding: .3rem;
+    gap: .4rem;
+    padding: 1.5rem;
     font-size: large;
     text-decoration: none
 }
@@ -141,7 +151,6 @@ figcaption {
     margin-bottom: 10px;
     margin-top: 10px;
     padding: 10px;
-    width: 90%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: sticky;
@@ -171,11 +180,16 @@ textarea{
 strong {
     font-weight: bolder;
 }
+.titel {
+    width: 80vw;
+    border-radius: .3rem;
+}
 #box-vens {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     border-radius: .3rem;
+    width: 80vw;
 }
 #box-aisha {
     display: flex;
@@ -185,6 +199,7 @@ strong {
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: .3rem;
+    width: 80vw;
 }
 #aisha {
     width: 50vw;
@@ -206,8 +221,21 @@ strong {
     background-color: lightgray;
     margin-top: 10px;
     border-radius: .3rem;
+    width: 80vw;
 }
-
+footer {
+    width: 100%;
+    height: 100px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    z-index: 999;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px 0 0 10px;
+    border-radius: .2rem;
+}
 @media (max-width: 1072px) {
     .menu ul {
         display: none;
